# auraagg

./: Makefile  README.md  docker-compose.yml  package-lock.json  package.json  postcss.config.js  requirements.txt
api/: .env.example  .eslintrc.json  .gitignore  Dockerfile  README.md  docker-compose.yml  jest.config.js  package-lock.json  package.json
api/src/: app.js  index.js  server.js
api/src/config/: index.js
api/src/routes/: crosschain.js  quote.js  swap.js
api/src/utils/: logger.js
api/tests/: setup.js
api/tests/routes/: crosschain.test.js  quote.test.js  swap.test.js
contracts/: hardhat.config.js  package.json
contracts/contracts/core/: CrossChainSwap.sol  RouterFacet.sol
contracts/contracts/interfaces/: IDiamondCut.sol
contracts/contracts/libraries/: GasSaver.sol
contracts/scripts/: deploy.js
router-engine/: Cargo.toml  optimized_router.py
router-engine/src/: lib.rs
src/: App.tsx
src/components/: Header.tsx
src/contexts/: Web3Context.tsx
